# libchdman-rs

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  LICENSE  README.md  RELEASING.md  STATUS.md  TODO.md  build.rs
.github/workflows/: ci.yml  publish-crates-io.yml  release-prebuilt.yml  test-riscv.yml  test-winarm.yml
docs/: api.md  build.md  chd-rs-feature-mirror-implementation.md  chdman-mapping.md  ffi.md  format-modules.md  logic.md  management.md  migration-from-chd-rs.md  update.md
examples/: check-prebuilt.rs  extract-cd.rs
scripts/: validate-archive.sh
src/: cd.rs  codec.rs  copy.rs  dvd.rs  enhancements.rs  hd.rs  lib.rs  streaming.rs  sys.rs
sys/: cd_shim.cpp  chd_shim.cpp  chd_shim.h  minimal_osd.cpp
tests/: basic_tests.rs  cd_roundtrip.rs  codec_parse.rs  copy_roundtrip.rs  custom_io.rs  dvd_roundtrip.rs  gdi_roundtrip.rs  hd_roundtrip.rs  integration.rs  thread_cap.rs
tests/common/: mod.rs
