[package]
name = "libchdman-rs"
version = "0.287.0-l1"
edition = "2021"
authors = ["Jules"]
description = "Rust wrapper for MAME CHD core"

[dependencies]
libc = "0.2"
tempfile = "3"

[dev-dependencies]
zip = "2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
# Dev-local only. Enables tests that shell out to a `chdman` binary on
# $PATH for cross-tool byte-for-byte parity verification. CI does not
# install chdman; run locally with `cargo test --features chdman_compat_tests`.
chdman_compat_tests = []
