[package]
name = "libchdman-rs"
version = "0.288.3"
edition = "2021"
authors = ["danifunker"]
description = "Rust wrapper around MAME's CHD (Compressed Hunks of Data) core. Supports CD/DVD/HD CHD read+write and ships pre-built static archives via the `prebuilt` feature for fast CI builds."
license = "GPL-2.0-only"
repository = "https://github.com/danifunker/libchdman-rs"
homepage = "https://github.com/danifunker/libchdman-rs"
documentation = "https://docs.rs/libchdman-rs"
readme = "README.md"
keywords = ["chd", "mame", "cd-rom", "rom", "disc-image"]
categories = ["multimedia::encoding", "filesystem", "compression"]

# Files shipped in the crates.io tarball. Anything NOT listed here is
# excluded. Intent: ship just enough to make the `prebuilt` feature
# work, not the ~900 MB of vendored MAME C++ source. Consumers who want
# to compile MAME from source must depend on the git repo instead — see
# the "Choosing between crates.io and git" section of README.md.
include = [
    "/src/**/*.rs",
    "/build.rs",
    "/examples/check-prebuilt.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[dependencies]
libc = "0.2"
tempfile = "3"

[dev-dependencies]
zip = "8"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[features]
# Dev-local only. Enables tests that shell out to a `chdman` binary on
# $PATH for cross-tool byte-for-byte parity verification. CI does not
# install chdman; run locally with `cargo test --features chdman_compat_tests`.
chdman_compat_tests = []

# Download a pre-built static archive matching the current target triple
# from GitHub Releases instead of compiling MAME's C++ from source.
#
# When this feature is on:
#   - build.rs fetches https://github.com/danifunker/libchdman-rs/releases/download/
#       v<crate-version>/libchdman_rs-<triple>[-<glibc-tag>].<ext>
#   - hash is verified against the sibling .sha256 file
#   - failure aborts the build by default; set LIBCHDMAN_PREBUILT_FALLBACK=1
#     to silently fall back to source compilation
#   - set LIBCHDMAN_FORCE_SOURCE=1 to skip the download path entirely
#   - set LIBCHDMAN_GLIBC=<floor> (Linux only) to choose which glibc floor
#     the prebuilt archive was built against. Accepts the bare value
#     (e.g. "2.35") or "auto" (default — picks glibc2.35, the modern
#     sweet spot for Debian 12 / Ubuntu 22.04 / RHEL 9)
prebuilt = ["dep:ureq", "dep:sha2", "dep:hex"]
